// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/project/status/dateDB 01 1`] = `
Object {
  "dateDB": 0,
}
`;

exports[`lib/riw/project/status/dateDB 02 1`] = `
Object {
  "dateDB": 1970-01-01T00:00:02.000Z,
}
`;
